--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,168 +32,103 @@
   <body>
     <div id="wrap">
       <header>
-        <div class="container" class="span11"> 
-	     
-		 <div class ="row"> 
-		  
-		  <div class="span4", style="float:left">
-			<div class="row" id="ligne1">
-				<div id="Notifications" class="span1">
-					<div id="image">
-						<%= image_tag('notifications-1.png') %>
+		<div class="container">
+			<div class="row" id="tout-enhaut">
+				<div class="gauche">
+					<div class="row" id="try2">
+						<%= link_to image_tag('logo.png', :alt => 'Moutoners'), root_path, class: "image1"%>
 					</div>
-					<div id="chiffre">
+					<div class="row" id="try3">
+						<div class="titre">
+							<%= link_to "moutoners", root_path, class: "title"%>
+						</div>
+						<div class="facebook-page1">
+							<%= link_to image_tag('facebook_petit.png', :alt => 'Moutoners'), "www.facebook.com"%>
+						</div>
+						<div class="twitter-page1">
+							<%= link_to image_tag('twitter-petit.png', :alt => 'Moutoners'), "www.facebook.com"%>
+						</div>
+						<div class="linkedin-page1">
+							<%= link_to image_tag('linkedin_petit.png', :alt => 'Moutoners'), "www.facebook.com"%>
+						</div>
+					</div>
+					<div class="row" id="try4">
 						<% if current_user %>
-							<%= link_to current_user.notifications, notifications_user_path(current_user), class: "chiffre"%>
-						<%else%>
-							0
-						<%end%>
+						<div class="nom"><%= link_to current_user.fitting_name, current_user, class: "title"%>
+						</div>
+						<div class="nom2"><%= link_to current_user.notifications, notifications_user_path(current_user), class: "chiffre"%> notification(s)
+						</div>
 					</div>
-
-				</div>
-				<div id="Notifications2" class="span1">
-					<div id="image">
-						<%= image_tag('notifications-2.png') %>
+					<div class="row" id="try6">
+						<div class="texte"><%= link_to "Déconnexion",destroy_user_session_path, :method=>'delete'%>
 					</div>
-					<div id="chiffre">
-						<% if current_user %>
-							<%= link_to current_user.notifications, notifications_user_path(current_user), class: "chiffre"%>
-						<%else%>
-							0
-						<%end%>
+						<% else %>
+							<%= form_for(resource, :as => resource_name, :url => session_path(resource_name)) do |f| %>
+							<div class="login"><%= f.email_field :email, :autofocus => true, placeholder: "Mail:", class: "login-field" %></div>
+							<div class="login"><%= f.password_field :password, placeholder: "Mot de Passe:", class: "login-field"%></div>
+							<span class="login"><%= f.submit "OK", class: "submit-login" %></span>
 					</div>
-				</div>
+					<div class="row" id="try5">
+						<div class="texte"><%= link_to "Connexion via facebook", user_omniauth_authorize_path(:facebook), class: "lien"%>
+						</div>
+						<div class="texte"><%= link_to "Mot de passe oublié?", root_path, class: "lien"%>
+						</div>
+							<% end%>
+						<% end %>
+					</div>
 			</div>
-			
-			<div class="row" id="ligne2">
-				<div id="Notifications3" class="span1">
-					<div id="image">
-						<%= image_tag('notifications-3.png') %>
-					</div>
-					<div id="chiffre">
-						<% if current_user %>
-							<%= link_to current_user.notifications, notifications_user_path(current_user), class: "chiffre" %>
-						<%else%>
-							0
-						<%end%>
+			<div class="droite">
+				<div class ="row", id="debat-nav">
+					<div id="apprendre">
+			        	  <%= link_to "Apprendre à débattre", apprendre_path, class: "apprendre" %>
 					</div>
 				</div>
-				<div id="Notifications4" class="span1">
-					<div id="image">
-						<%= image_tag('notifications-4.png') %>
-					</div>
-					<div id="chiffre">
-						<% if current_user %>
-							<%= link_to current_user.notifications, notifications_user_path(current_user), class: "chiffre"%>
-						<%else%>
-							0
-						<%end%>
-					</div>
-				</div>
-			</div>	
-	
-			<div class ="row" id="search">
-				<div id="gris">
+				<div class ="row" id="search">
 					<div class="loupe">
-						<%= image_tag('search-tag.png') %>
+							<%= image_tag 'search-tag.png', class: "loupe2"%>
+					</div>
+					<div>
+			  			<%= form_tag ("/search_results"), :method => "get", :id=>"search-form" do %>
+
+						  <%= text_field_tag ("search") , nil, :id=>"search-text",
+						    :onblur=>"if(this.value=='')this.setAttribute('class', 'search_input');",
+						    :onfocus=>"this.setAttribute('class', 'search_input_clear');",
+							placeholder: "Chercher un débat"
+						 %>
+						<% end %>
 					</div>
 				</div>
-				<div>
-	      			<%= form_tag ("/search_results"), :method => "get", :id=>"search-form" do %>
-                	
-					  <%= text_field_tag ("search") , nil, :id=>"search-text",
-					    :onblur=>"if(this.value=='')this.setAttribute('class', 'search_input');",
-					    :onfocus=>"this.setAttribute('class', 'search_input_clear');",
-						placeholder: "Chercher un débat"
-					 %>
-					<% end %>
-				</div>
+
 			</div>
-	      </div>
-
-	      <div class="span4">
-			<div class="span3">
-	      	<div id="logo", class="img-circle">
-	              <%= link_to image_tag('logo.png', :alt => 'Moutoners'), root_path %>
-	        </div>
 			</div>
-	      </div>
-		    
-          <div class ="span4", style:"float:right" id="adroite">
-			<div class ="row">
-			  <% if user_signed_in? %>
-	            <div id="user-nav" class="btn-group">
-	                <%= link_to current_user.fitting_name, current_user, class: "white" %>
-	              <a id="dropdown" class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-	                <span class="caret"></span>
-	              </a>
-	              <ul class="dropdown-menu">
-	                <li><%= link_to "Profil", user_path(current_user) %></li>
-	                <li><%= link_to "Déconnexion", destroy_user_session_path, :method=>'delete' %></li>
-	              </ul>
-	            </div>
-	          <% else %>
-	            <div id="deconnecte" class="unstyled">
-					<%= form_for(resource, :as => resource_name, :url => session_path(resource_name)) do |f| %>
-						  <div class="login"><%= f.email_field :email, :autofocus => true, placeholder: "Pseudo:", class: "login-field" %></div>
-						  <div class="login"><%= f.password_field :password, placeholder: "Mot de Passe:", class: "login-field"%></div>
-	            </div>
-			</div>
-			
-			<div class ="row", id="debat-nav">
-				<div class="row" class="span2 offset 2" style:"float:right" id="RS">
-					<div class="motdepasse">Un oubli?</div>
-					 <div><%= f.submit "OK", class: "submit-login" %></div>
-					<%end%>
-					<div class="facebook-page">
-						<%= link_to image_tag('facebook_petit.png', :alt => 'Moutoners', :class => "image"), user_omniauth_authorize_path(:facebook)%>
-					</div>
-				</div>
-				<% end %>
-			<% if current_user %>
-			<div class ="row", id="debat-nav">
-			<% end %>
-				<div id="apprendre">
-					<%= content_tag(:li, :class => ("active" if current_page?(apprendre_path))) do %>
-	            	  <%= link_to apprendre_path do %>
-	            	    <%= content_tag(:strong, "APPRENDRE A DEBATTRE") %>
-	            	  <% end %>
-	            	<% end %>
-				</div>
-			</div>
-          </div>
-		 </div>
-		
-		
-		 <div class ="row"> 
-		   <div class = "span11", id = "navigation">
-		 	<div class = "span11">
-		     <ul id="main-nav" class="unstyled">
-				
-
-                 <li><%= link_to "TIMELINE", list_path, class: "black" %></li>
-				
-				<li class="tiret">|</li>
-				
-				 <li><%= link_to "LES EXPERTS", experts_path, class: "black" %></li>
-				
-				<li class="tiret">|</li>
-
-                 <li><%= link_to "DEBATS OUVERTS", debats_path, class: "black" %></li>
-				
-				<li class="tiret">|</li>
-
-                 <li><%= link_to "DEFIS", dialectiques_path, class: "black" %></li>
-				
-				<li class="tiret">|</li>
-
-
-                 <li class="last"><%= link_to "LES GROUPES", groups_path, class: "black" %></li>
-               </ul>
+		 	<div class ="row"> 
+		 	  <div class = "span11", id = "navigation">
+		 		<div class = "span11">
+		 	    <ul id="main-nav" class="unstyled">
+         	
+         	
+		 	        <li><%= link_to "TIMELINE", list_path, class: "black" %></li>
+         	
+		 	   	<li class="tiret">|</li>
+         	
+		 	   	 <li><%= link_to "LES EXPERTS", experts_path, class: "black" %></li>
+         	
+		 	   	<li class="tiret">|</li>
+         	
+		 	        <li><%= link_to "DEBATS OUVERTS", debats_path, class: "black" %></li>
+         	
+		 	   	<li class="tiret">|</li>
+         	
+		 	        <li><%= link_to "DEFIS", dialectiques_path, class: "black" %></li>
+         	
+		 	   	<li class="tiret">|</li>
+         	
+         	
+		 	        <li class="last"><%= link_to "LES GROUPES", groups_path, class: "black" %></li>
+		 	      </ul>
+		 		</div>
+		 	  </div>
 		 	</div>
-		   </div>
-		 </div>
-		
 		</div>
       </header>
       
