--- a/app/assets/stylesheets/debates.css.scss
+++ b/app/assets/stylesheets/debates.css.scss
@@ -164,6 +164,9 @@
 		font-family : "gotham";
 		font-size : 18px;
 		color: white;
+			.tags{
+			color: white;
+			}
 		
 		li{
 		margin-right: 5px;
