--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -106,7 +106,7 @@
 		<div id="best-debates3">	
     	    	<%= render "shared/challenge_badge", :challenge => @challenge%>
 				<%= render "shared/debate_badge", :debate => @debate%>
-				<%= render "shared/doulin_badge", :doulin => @doulin%>
+								<%= render "shared/debate_badge", :debate => @debate%>
 		</div>
 	</div>
 		
