--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -8,9 +8,9 @@
 }
 
 #activities{
-	margin-left: 10px;
-	margin-top: 0px;
+	margin-top: 15px;
 	margin-bottom: 15px;
+	
 	#intro-activities{
 		margin-left: -20px;
 		
@@ -24,7 +24,33 @@
 			font-family: "georgia";
 		
 		}
+		.texte2{
+			height:30px;
+			padding-left: 10px;
+			padding-top: 10px;
+			background-color: #FF6969;
+			font-style: italic;
+			font-size: 14px;
+			font-family: "georgia";
+		
+		}
+		.texte3{
+			height:30px;
+			padding-left: 10px;
+			padding-top: 10px;
+			background-color: #AADOFF;
+			font-style: italic;
+			font-size: 14px;
+			font-family: "georgia";
+		
+		}
 
+	}
+	
+	#pour-arg{
+		margin-left:20px;
+		margin-top:-33px;
+		margin-bottom: 20px;
 	}
 
 }
@@ -32,8 +58,8 @@
 
 
 #notifications{
-	margin-left: 10px;
-	margin-top: 0px;
+
+	margin-top: 15px;
 	margin-bottom: 15px;
 	#intro-notifications{
 		margin-left: -20px;
@@ -223,15 +249,17 @@
 
 
 #container-activ{
-	margin-left: 175px;
-	width: 840px;
+	margin-left: 160px;
+	width: 900px;
+	margin-top: -15px;
 
 	.div{
 	diplay: inline-block;
 	}
 	
 	#container-activ2{
-	margin-top: 15px;
+	margin-top: -15px;
+	margin-left: 35px;
 	}				
 }
 
@@ -267,3 +295,182 @@
 	
 }
 
+#sign_in{
+		
+	.logo2{
+	margin: 15px 0px 50px 325px;
+	}
+	
+	.facebook{
+	margin-left: 235px;
+	margin-top: 40px;
+	background-color: #808080;
+	height:34px;
+	width: 260px;
+	padding-top:15px;
+ 	text-align: center;
+	color: white;
+	line-height: 20px;
+	font-weight: bold;
+	font-family:"gotham";
+	font-size: 18px;
+	
+	.via{
+	line-height: 20px;
+	font-weight: bold;
+	font-family:"gotham";
+	font-size: 18px;
+	color: black;
+	margin-left: 15px;
+	}
+	}
+	#sign_in1{
+		margin-top: 40px;
+		margin-left: 0px;
+		font-family: "georgia";
+		font-style: italic;
+		font-weight: bold;
+		font-size: 16px;
+		text-align: center;
+	}
+	
+	#sign_in2{
+	margin-top: 20px;
+	width: 530px;
+	background-color: #AAD0FF;
+	border-radius: 13px;
+	margin-left: 100px;
+	margin-bottom: 40px;
+	
+		#sign_in3{
+		margin-top: 0px;
+		margin-left: 15px;
+		
+			#sign_in4{
+			margin-left: 0px;
+			margin-top: 15px;
+			text-align: center;
+					::-webkit-input-placeholder {
+					   font-family: "gotham";
+					   color: black;
+					}
+					
+					.texte1{
+					font-family: "gotham";
+					font-size: 27px;
+					
+					}
+					
+					.login-field{
+						width: 200px;
+						border-radius: 0px;
+						background-color: white;
+						font-family: "georgia";
+						font-size: 15px;
+						color: black;
+						height: 25px;
+						border: none;
+						}
+						
+						.login-field1{
+												margin-top: -21px;
+							margin-left: 0px;
+							width: 212px;
+							border-radius: 0px;
+							background-color: white;
+							font-family: "georgia";
+							font-size: 15px;
+							color: black;
+							border: none;
+							}
+		
+					.texte{
+					width: 184px;
+					padding-left: 5px;
+					font-family: "gotham";
+					font-weight: bold;
+					font-size:11px;
+					margin-right: 40px;
+					}
+					.submit-login{
+					float: right;
+					border-radius: 0px;
+					border: none;
+					background-color: black;
+					font-family: "gotham";
+					font-size: 12px;
+					color: white;
+					height: 24px;
+					}
+			}
+		}
+		
+		#sign_up{
+		margin-top: 0px;
+		margin-left: 15px;
+		margin-right: 15px;
+		float: right;
+		padding-left: 25px;
+		border-left: 3px Solid black;
+		
+			#sign_in4{
+			margin-left: 0px;
+			margin-top: 15px;
+			text-align: center;
+					::-webkit-input-placeholder {
+					   font-family: "gotham";
+					   color: black;
+					}
+					
+					.texte1{
+					font-family: "gotham";
+					font-size: 27px;
+					
+					}
+					
+					.login-field{
+						width: 200px;
+						border-radius: 0px;
+						background-color: white;
+						font-family: "georgia";
+						font-size: 15px;
+						color: black;
+						height: 25px;
+						border: none;
+						}
+						
+						.login-field1{
+							margin-left: 0px;
+							width: 152px;
+							border-radius: 0px;
+							background-color: white;
+							font-family: "georgia";
+							font-size: 15px;
+							color: black;
+							border: none;
+							height: 25px;
+							float: left;
+							}
+		
+					.texte{
+					width: 184px;
+					padding-left: 5px;
+					font-family: "gotham";
+					font-weight: bold;
+					font-size:11px;
+					}
+					.submit-login{
+					float: right;
+					border-radius: 0px;
+					border: none;
+					background-color: black;
+					font-family: "gotham";
+					font-size: 12px;
+					color: white;
+					height: 24px;
+					}
+			}
+		}
+	
+	}
+}
