--- a/app/views/debates/show.html.erb
+++ b/app/views/debates/show.html.erb
@@ -43,8 +43,8 @@
 							<%= link_to @debate.title, @debate, class: "title3"%>
 						</div>
 						<div class="row" id="tags_list_doulin">
-							<% @debate.tag_list.each do |l|%>
-								<li><%=l%></li>
+							<% @debate.tags.each do |l|%>
+								<li><%= link_to l.name, list_path(:view =>'tag', :tag => l.name), class: "tags"%></li>
 							<% end%>
 						</div>
 						<div class="row" id="content">
@@ -52,19 +52,19 @@
 						</div>
 						<div class="row" id="vote">
 							<span class="vote2">VOTEZ</span>
-							<% if current_user && @debate.valeur_vote(current_user) == 1.0 %>
+							<% if current_user && @debate.in_deb?(current_user) && @debate.valeur_vote(current_user) == 1.0 %>
 				 			<li class="oui-oui"><%= link_to "OUI", vote_debate_path(@debate, type: "up"), method: "post", :class => "oui2" %>
 							</li>
 							<% else%>
 				 			<li class="oui-oui"><%= link_to "OUI", vote_debate_path(@debate, type: "up"), method: "post", :class => "oui" %>
 							</li>							
 							<% end%>
-							<% if current_user && @debate.valeur_vote(current_user) == 0.0 %>
+							<% if current_user && @debate.in_deb?(current_user) && @debate.valeur_vote(current_user) == 0.0 %>
 							<li class="suisse-suisse"><%= link_to image_tag("croix-suisse-01.png"), vote_debate_path(@debate, type: "neutral"), method: "post", class: "suisse2" %></li>
 							<% else%>
 							<li class="suisse-suisse"><%= link_to image_tag("croix-suisse.png"), vote_debate_path(@debate, type: "neutral"), method: "post", class: "suisse" %></li>
 							<%end%>
-							<% if current_user && @debate.valeur_vote(current_user) == -1.0 %>
+							<% if current_user && @debate.in_deb?(current_user) && @debate.valeur_vote(current_user) == -1.0 %>
 							<li class="non-non"><%= link_to "NON", vote_debate_path(@debate, type: "down"), method: "post", :class => "non2" %></li>				
 							<%else%>
 							<li class="non-non"><%= link_to "NON", vote_debate_path(@debate, type: "down"), method: "post", :class => "non" %></li>							
