--- a/app/views/static_pages/search_results.html.erb
+++ b/app/views/static_pages/search_results.html.erb
@@ -1,6 +1,16 @@
-
-</br>
-</br>
-	<%=link_to "sport", list_path(:cat => 1)%>
+<div class="container" id="index-doulins">
 	
-	<%= render "shared/index", :object => @lists %>
+	<div class="row" id="intro-doulin">
+		<div class="texte">Résultat de la recherche</div>
+	</div>
+	
+				<div class="row" id= "for-badges">
+					<div class="span3">
+						<%= render "shared/menu_cat"%>
+					</div>
+	
+					<div class="span8" id="list">
+						<%= render "shared/index", :object => @lists %>
+					</div>
+				</div>
+</div>
